# django-better-passwords

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
django_better_passwords/: apps.py  middleware.py  models.py  signals.py
django_better_passwords/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_better_passwords/migrations/: 0001_initial.py  0002_auto_20240204_2224.py  0003_auto_20240217_1630.py  0004_auto_20240217_1759.py  0005_auto_20240217_1901.py  0006_passwordrecord_first_login.py
django_better_passwords/validators/: custom_password_validator.py
