[metadata]
name = django-better-passwords
version = 0.1
description = A Django app to provide tools to enforce stronger password policies and expiration.
long_description = file: README.rst
url = https://github.com/andrelccorrea/django-better-passwords
author = André Corrêa
author_email = andre.lcosta@hotmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 2.0

[flake8]
ignore = D100, D101, D103, D102, D104, D105, D106, D107, D200, D202, D204, D205, D210, D400, D401, E501, W503, W504, W601, W613
filename = *.py
exclude = .git, __pycache__, *migrations*, venv, .venv
max-line-length = 100
select = B,C,E,F,W,T4,B9
